# frameworky-rust

./: .gitignore  Cargo.toml  README.md  benchmark.ps1  build_deploy.cmd  deploy.sh  wasm_build.cmd  wasm_build_deply.cmd
.github/workflows/: rust.yml
balls/: index.html
balls/pkg/: balls.d.ts  balls.js  balls_bg.js  balls_bg.wasm  balls_bg.wasm.d.ts
examples/balls/: Cargo.toml  index.html  lib.rs  main.rs
examples/balls/pkg/: balls.d.ts  balls.js  balls_bg.wasm  balls_bg.wasm.d.ts  package.json
frameworky/: Cargo.toml
frameworky/src/: context.rs  event.rs  frameworky.rs  lib.rs  simple_system.rs
frameworky/src/backends/: mod.rs
frameworky/src/backends/kiss3d_backend/: mod.rs
frameworky/src/components/: body.rs  mod.rs  transform.rs
frameworky/src/events/: mod.rs
frameworky/src/hosts/: mod.rs
frameworky/src/hosts/kiss3d_host/: arc_ball_modified.rs  mod.rs
frameworky/src/systems/: body_system.rs  kiss3d_system.rs  mod.rs  sdl_system.rs
frameworky/src/systems/kiss3d_system/: kiss3d_system.rs  mod.rs
sample/: Cargo.toml  build.rs  index.html
sample/src/: lib.rs  main.rs
src/: context.rs  frameworky.rs  lib.rs  simple_system.rs
src/components/: body.rs  camera.rs  mod.rs  text2d.rs  transform.rs
src/hosts/kiss3d_host/: mod.rs
src/systems/: body_system.rs  kiss3d_system.rs  mod.rs
src/systems/kiss3d_system/: arc_ball_modified.rs  kiss3d_system.rs  mod.rs
