[package]
name = "frameworky"
version = "0.1.0"
authors = ["horup <sah@sah.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.68"
legion = { version = "0.3.0", default-features = false, features = ["wasm-bindgen"] }
nalgebra = "0.22.0"
rand = "0.7.3"
ncollide3d = "0.24.0"
nphysics3d = {version = "0.17.0", features = ["use-wasm-bindgen"]}
generational-arena = "0.2.8"
kiss3d = {git = "https://github.com/sebcrozet/kiss3d.git", branch = "web-sys"}