[package]
name = "frameworky"
version = "0.1.0"
authors = ["horup <sah@sah.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
legion = "0.3.0"
nalgebra = "0.22.0"
sdl2 = "*"
kiss3d = "0.25.0"
rand = "0.7.3"
ncollide3d = "0.24.0"
nphysics3d = "0.17.0"
generational-arena = "0.2.8"